--- a/consultas.html
+++ b/consultas.html
@@ -411,9 +411,12 @@
                         <div class="services__item__text">
                             <h5>Cirurgia</h5>
                             <ul>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Consulta de Cirurgia</a></li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Circuncisão com anel</a></li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Sutura de feridas superficiais</a>
+                                <li><a href="pages/cirurgia.html#Cirurgia"><i class="fa fa-check-circle"></i> Consulta
+                                        de Cirurgia</a></li>
+                                <li><a href="pages/cirurgia.html#anel"><i class="fa fa-check-circle"></i> Circuncisão
+                                        com anel</a></li>
+                                <li><a href="pages/cirurgia.html#sutura"><i class="fa fa-check-circle"></i> Sutura de
+                                        feridas superficiais</a>
                                 </li>
                             </ul>
                         </div>
@@ -428,10 +431,13 @@
                         <div class="services__item__text">
                             <h5>Enfermagem</h5>
                             <ul>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Apoio domiciliário no pós-parto</a>
+                                <li><a href="pages/enfermagem.html#domicilio"><i class="fa fa-check-circle"></i> Apoio
+                                        domiciliário no pós-parto</a>
                                 </li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Consulta de enfermagem</a></li>
-                                <li><a href=""><i class="fa fa-check-circle"></i> Pensos</a></li>
+                                <li><a href="pages/enfermagem.html#conseferm"><i class="fa fa-check-circle"></i>
+                                        Consulta de enfermagem</a></li>
+                                <li><a href="pages/enfermagem.html#pensos"><i class="fa fa-check-circle"></i> Pensos</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
