--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Aesthetic, Pre-pos, Clinica em Maputo, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>a clinica</title>
+    <title>A clinica</title>
     <!-- Favicon no formato .png -->
     <link rel="icon" href="img/favicon.png" type="image/png">
     <!-- Google Font -->
@@ -310,17 +310,21 @@
                                             <li>
                                                 <span>Cirurgia</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="#">Consulta de Cirurgia</a></li>
-                                                    <li><a href="#">Circuncisão com anel</a></li>
-                                                    <li><a href="#">Sutura de feridas superficiais</a></li>
+                                                    <li><a href="pages/cirurgia.html#Cirurgia">Consulta de Cirurgia</a>
+                                                    </li>
+                                                    <li><a href="pages/cirurgia.html#anel">Circuncisão com anel</a></li>
+                                                    <li><a href="pages/cirurgia.html#sutura">Sutura de feridas
+                                                            superficiais</a></li>
                                                 </ul>
                                                 <br>
                                                 <span>Enfermagem
                                                 </span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="#">Apoio domiciliário no pós-parto</a></li>
-                                                    <li><a href="#">Consulta de enfermagem</a></li>
-                                                    <li><a href="#">Pensos</a></li>
+                                                    <li><a href="pages/enfermagem.html#domicilio">Apoio domiciliário no
+                                                            pós-parto</a></li>
+                                                    <li><a href="pages/enfermagem.html#conseferm">Consulta de
+                                                            enfermagem</a></li>
+                                                    <li><a href="pages/enfermagem.html#pensos">Pensos</a></li>
                                                 </ul>
                                             </li>
                                             <li>
@@ -485,49 +489,49 @@
                         <li>
                             <a href="consultas.html">
                                 <h5><strong><img src="img/icons/ci-4.png" alt="Pediatria"></strong></h5>
-                                <h5 class="subtitle mt-4 mt-4">Consultas</h5>
+                                <h5 class="subtitle mt-4 fw-semibold">Consultas</h5>
                             </a>
                         </li>
                         <li>
                             <a href="consultas.html">
                                 <h5><strong><img src="img/icons/ci-2.png" alt="Nutrição"></strong></h5>
-                                <h5 class="subtitle mt-4">Nutrição</h5>
+                                <h5 class="subtitle mt-4 fw-semibold">Nutrição</h5>
                             </a>
                         </li>
                         <li>
                             <a href="consultas.html">
                                 <h5><strong><img src="img/icons/ci-3.png" alt="Terapia Ocupacional"></strong></h5>
-                                <h5 class="subtitle mt-4">Terapia Ocupacional</h5>
+                                <h5 class="subtitle mt-4 fw-semibold">Terapia Ocupacional</h5>
                             </a>
                         </li>
                         <li>
                             <a href="consultas.html">
                                 <h5><strong><img src="img/icons/ci-1.png" alt="Vacinação"></strong></h5>
-                                <h5 class="subtitle mt-4">Vacinação</h5>
+                                <h5 class="subtitle mt-4 fw-semibold">Vacinação</h5>
                             </a>
                         </li>
 
                         <li>
                             <a href="consultas.html">
                                 <h5><strong><img src="img/icons/ci-3.png" alt="Terapia Ocupacional"></strong></h5>
-                                <h5 class="subtitle mt-4">Terapia Ocupacional</h5>
+                                <h5 class="subtitle mt-4 fw-semibold">Terapia Ocupacional</h5>
                             </a>
                         </li>
                         <li>
                             <a href="consultas.html">
                                 <h5><strong><img src="img/icons/ci-1.png" alt="Vacinação"></strong></h5>
-                                <h5 class="subtitle mt-4">Vacinação</h5>
+                                <h5 class="subtitle mt-4 fw-semibold">Vacinação</h5>
                             </a>
                         </li>
                         <li>
                             <h5><strong><img src="img/icons/ci-2.png" alt="Nutrição"></strong></h5>
-                            <h5 class="subtitle mt-4">Nutrição</h5>
+                            <h5 class="subtitle mt-4 fw-semibold">Nutrição</h5>
                             </a>
                         </li>
                         <li>
                             <a href="consultas.html">
                                 <h5><strong><img src="img/icons/ci-4.png" alt="Pediatria"></strong></h5>
-                                <h5 class="subtitle mt-4">Pediatria</h5>
+                                <h5 class="subtitle mt-4 fw-semibold">Pediatria</h5>
                             </a>
                         </li>
                     </ul>
@@ -1014,7 +1018,7 @@
                     <div class="top">
                         <div class="userDeatils">
                             <div class="profileImg">
-                                <img src="img/blog/blog-5.jpg" alt="user" class="cover">
+                                <img src="img/profile.png" alt="user" class="cover">
                             </div>
                             <h3>A Clínica<br><span>a_clinica</span></h3>
                         </div>
