--- a/team.html
+++ b/team.html
@@ -395,16 +395,18 @@
                         <div class="row">
                             <div class="col-sm-6 col-md-4 col-lg-3 single-team">
                                 <div class="inner">
-                                    <div class="team-img">
-                                        <img src="img/doctor/team-1.jpg" alt="Member Photo">
-                                    </div>
-                                    <div class="team-content">
-                                        <h4 class="mb-2">Marcos Aurelio</h4>
-                                        <p>Personal Trainer certificado, desporto e fitness</p>
-                                        <div class="team-social mt-3">
-                                            <a href="#" class="fa fa-envelope"></a>
+                                    <a href="pages/team-sing.html">
+                                        <div class="team-img">
+                                            <img src="img/doctor/team-1.jpg" alt="Member Photo">
                                         </div>
-                                    </div>
+                                        <div class="team-content">
+                                            <h4 class="mb-2">Marcos Aurelio</h4>
+                                            <p>Personal Trainer certificado, desporto e fitness</p>
+                                            <div class="team-social mt-3">
+                                                <a href="#" class="fa fa-envelope"></a>
+                                            </div>
+                                        </div>
+                                    </a>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
