--- a/team.html
+++ b/team.html
@@ -64,6 +64,13 @@
         .team-content {
             padding: 5px;
         }
+
+        .team-social .fa {
+            padding: 7px;
+            background-color: #d6a294;
+            border-radius: 50%;
+            color: beige;
+        }
     </style>
 </head>
 
@@ -397,11 +404,11 @@
                                 <div class="inner">
                                     <a href="pages/team-sing.html">
                                         <div class="team-img">
-                                            <img src="img/doctor/team-1.jpg" alt="Member Photo">
+                                            <img src="img/team/team 4.jpg" alt="Member Photo">
                                         </div>
                                         <div class="team-content">
-                                            <h4 class="mb-2">Marcos Aurelio</h4>
-                                            <p>Personal Trainer certificado, desporto e fitness</p>
+                                            <h4 class="mb-2">Calisto Chemane</h4>
+                                            <p>Atendimento ao Paciente</p>
                                             <div class="team-social mt-3">
                                                 <a href="#" class="fa fa-envelope"></a>
                                             </div>
@@ -412,7 +419,7 @@
                             <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
                                 <div class="inner">
                                     <div class="team-img">
-                                        <img src="img/doctor/team-2.jpg" alt="Member Photo">
+                                        <img src="img/team/team-6.jpg" alt="Member Photo">
                                     </div>
                                     <div class="team-content">
                                         <h4 class="mb-2">Marcos Aurelio</h4>
@@ -426,10 +433,10 @@
                             <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
                                 <div class="inner">
                                     <div class="team-img">
-                                        <img src="img/doctor/team-3.jpg">
+                                        <img src="img/team/team-5.jpg">
                                     </div>
                                     <div class="team-content">
-                                        <h4 class="mb-2">Marcos Aurelio</h4>
+                                        <h4 class="mb-2">Joana Maria</h4>
                                         <p>Personal Trainer certificado, desporto e fitness</p>
                                         <div class="team-social mt-3">
                                             <a href="#" class="fa fa-envelope"></a>
@@ -440,10 +447,10 @@
                             <div class="col-sm-6 col-md-4 mb-4 col-lg-3 single-team">
                                 <div class="inner">
                                     <div class="team-img">
-                                        <img src="img/doctor/team-4.jpg">
+                                        <img src="img/team/team-7.jpg">
                                     </div>
                                     <div class="team-content">
-                                        <h4 class="mb-2">Marcos Aurelio</h4>
+                                        <h4 class="mb-2">Maria Joana</h4>
                                         <p>Personal Trainer certificado, desporto e fitness</p>
                                         <div class="team-social mt-3">
                                             <a href="#" class="fa fa-envelope"></a>
