--- a/pages/enfermagem.html
+++ b/pages/enfermagem.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>A clinica</title>
     <!-- Favicon no formato .png -->
-    <link rel="icon" href="img/favicon.png" type="image/png">
+    <link rel="icon" href="../img/favicon.png" type="image/png">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
