--- a/humanitario.html
+++ b/humanitario.html
@@ -124,8 +124,8 @@
                                     <ul class="dropdown">
                                         <li><a href="./about.html">Sobre Nós</a></li>
                                         <li><a href="./team.html">Equipa</a></li>
-                                        <li><a href="./partners.html">O nosso trabalho humanitário</a></li>
-                                        <li><a href="./partners.html">Pedido de informação/ Agendamento</a></li>
+                                        <li><a href="./humanitario.html">O nosso trabalho humanitário</a></li>
+                                        <li><a href="./info.html">Pedido de informação/ Agendamento</a></li>
                                     </ul>
                                 </li>
 
@@ -296,9 +296,9 @@
                                     </ul>
                                 </li>
                                 <a href="#" class="primary-btn" style="
-                                    right: 0;
-                                    position: absolute;
-                                "> <i class="fa fa-lock"></i> Área Reservada</a>
+                                        right: 0;
+                                        position: absolute;
+                                    "> <i class="fa fa-lock"></i> Área Reservada</a>
                             </ul>
 
                         </nav>
