--- a/consultas.html
+++ b/consultas.html
@@ -145,22 +145,25 @@
                                     <ul class="dropdown">
                                         <li><a href="./about.html">Sobre Nós</a></li>
                                         <li><a href="./team.html">Equipa</a></li>
-                                        <li><a href="./partners.html">O nosso trabalho humanitário</a></li>
-                                        <li><a href="./partners.html">Pedido de informação/ Agendamento</a></li>
+                                        <li><a href="./humanitario.html">O nosso trabalho humanitário</a></li>
+                                        <li><a href="./info.html">Pedido de informação/ Agendamento</a></li>
                                     </ul>
                                 </li>
 
                                 <!-- Consultas -->
-                                <li><a class="arrow">Consultas <span class="dropdown-arrow"></span></a>
+                                <li><a class="arrow" href="consultas.html">Consultas <span
+                                            class="dropdown-arrow"></span></a>
                                     <div class="dt-mega-menu-wrap justify-content-center d-flex">
                                         <ul class="dropdown menu">
                                             <li>
                                                 <span>Amamentação</span>
                                                 <ul class="dropdown-sec">
+
                                                     <li><a href="pages/amament-pre-parto.html#pre">Consulta
                                                             Pré-parto</a></li>
                                                     <li><a href="pages/amament-pre-parto.html#pos">Consulta
                                                             Pós-parto</a></li>
+
                                                 </ul>
                                                 <br>
                                                 <span class="pt-4">Medicina do Viajante</span>
@@ -171,17 +174,21 @@
                                             <li>
                                                 <span>Cirurgia</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="#">Consulta de Cirurgia</a></li>
-                                                    <li><a href="#">Circuncisão com anel</a></li>
-                                                    <li><a href="#">Sutura de feridas superficiais</a></li>
+                                                    <li><a href="pages/cirurgia.html#Cirurgia">Consulta de Cirurgia</a>
+                                                    </li>
+                                                    <li><a href="pages/cirurgia.html#anel">Circuncisão com anel</a></li>
+                                                    <li><a href="pages/cirurgia.html#sutura">Sutura de feridas
+                                                            superficiais</a></li>
                                                 </ul>
                                                 <br>
                                                 <span>Enfermagem
                                                 </span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="#">Apoio domiciliário no pós-parto</a></li>
-                                                    <li><a href="#">Consulta de enfermagem</a></li>
-                                                    <li><a href="#">Pensos</a></li>
+                                                    <li><a href="pages/enfermagem.html#domicilio">Apoio domiciliário no
+                                                            pós-parto</a></li>
+                                                    <li><a href="pages/enfermagem.html#conseferm">Consulta de
+                                                            enfermagem</a></li>
+                                                    <li><a href="pages/enfermagem.html#pensos">Pensos</a></li>
                                                 </ul>
                                             </li>
                                             <li>
@@ -310,9 +317,9 @@
                                     </ul>
                                 </li>
                                 <a href="#" class="primary-btn" style="
-                                    right: 0;
-                                    position: absolute;
-                                "> <i class="fa fa-lock"></i> Área Reservada</a>
+                                            right: 0;
+                                            position: absolute;
+                                        "> <i class="fa fa-lock"></i> Área Reservada</a>
                             </ul>
 
                         </nav>
