--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
                                         <li><a href="./about.html">Sobre Nós</a></li>
                                         <li><a href="./team.html">Equipa</a></li>
                                         <li><a href="./humanitario.html">O nosso trabalho humanitário</a></li>
-                                        <li><a href="./info.html
-                                            ">Pedido de informação/ Agendamento</a></li>
+                                        <li><a href="./info.html">Pedido de informação/ Agendamento</a></li>
                                     </ul>
                                 </li>
 
