--- a/pages/cirurgia.html
+++ b/pages/cirurgia.html
@@ -96,7 +96,7 @@
             <div class="row">
                 <div class="col-lg-2">
                     <div class="header__logo">
-                        <a href="../index.html"><img src="../img/logo.png" style="width: 80%;" alt=""></a>
+                        <a href="./index.html"><img src="img/logo.png" style="width: 80%;" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-10">
@@ -104,87 +104,96 @@
                         <nav class="header__menu">
                             <ul>
                                 <!-- Início -->
-                                <!-- <li class="active"><a class="arrow" href="../index.html">INÍCIO</a></li> -->
+                                <!-- <li class="active"><a class="arrow" href="./index.html">INÍCIO</a></li> -->
 
                                 <!-- A Clínica -->
-                                <li><a class="arrow" href="../about.html">A Clínica <span
+                                <li><a class="arrow" href="./about.html">A Clínica <span
                                             class="dropdown-arrow"></span></a>
                                     <ul class="dropdown">
-                                        <li><a href="../about.html">Sobre Nós</a></li>
-                                        <li><a href="../team.html">Equipa</a></li>
-                                        <li><a href="../partners.html">O nosso trabalho humanitário</a></li>
-                                        <li><a href="../partners.html">Pedido de informação/ Agendamento</a></li>
+                                        <li><a href="./about.html">Sobre Nós</a></li>
+                                        <li><a href="./team.html">Equipa</a></li>
+                                        <li><a href="./humanitario.html">O nosso trabalho humanitário</a></li>
+                                        <li><a href="./info.html">Pedido de informação/ Agendamento</a></li>
                                     </ul>
                                 </li>
 
                                 <!-- Consultas -->
-                                <li><a class="arrow">Consultas <span class="dropdown-arrow"></span></a>
+                                <li><a class="arrow" href="consultas.html">Consultas <span
+                                            class="dropdown-arrow"></span></a>
                                     <div class="dt-mega-menu-wrap justify-content-center d-flex">
                                         <ul class="dropdown menu">
                                             <li>
                                                 <span>Amamentação</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="../consultas.html">Consulta Pré-parto</a></li>
-                                                    <li><a href="../consultas.html">Consulta Pós-parto</a></li>
+
+                                                    <li><a href="pages/amament-pre-parto.html#pre">Consulta
+                                                            Pré-parto</a></li>
+                                                    <li><a href="pages/amament-pre-parto.html#pos">Consulta
+                                                            Pós-parto</a></li>
+
                                                 </ul>
                                                 <br>
                                                 <span class="pt-4">Medicina do Viajante</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="../#">Consulta</a></li>
+                                                    <li><a href="#">Consulta</a></li>
                                                 </ul>
                                             </li>
                                             <li>
                                                 <span>Cirurgia</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="../#">Consulta de Cirurgia</a></li>
-                                                    <li><a href="../#">Circuncisão com anel</a></li>
-                                                    <li><a href="../#">Sutura de feridas superficiais</a></li>
+                                                    <li><a href="pages/cirurgia.html#Cirurgia">Consulta de Cirurgia</a>
+                                                    </li>
+                                                    <li><a href="pages/cirurgia.html#anel">Circuncisão com anel</a></li>
+                                                    <li><a href="pages/cirurgia.html#sutura">Sutura de feridas
+                                                            superficiais</a></li>
                                                 </ul>
                                                 <br>
                                                 <span>Enfermagem
                                                 </span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="../#">Apoio domiciliário no pós-parto</a></li>
-                                                    <li><a href="../#">Consulta de enfermagem</a></li>
-                                                    <li><a href="../#">Pensos</a></li>
+                                                    <li><a href="pages/enfermagem.html#domicilio">Apoio domiciliário no
+                                                            pós-parto</a></li>
+                                                    <li><a href="pages/enfermagem.html#conseferm">Consulta de
+                                                            enfermagem</a></li>
+                                                    <li><a href="pages/enfermagem.html#pensos">Pensos</a></li>
                                                 </ul>
                                             </li>
                                             <li>
                                                 <span>Nutrição</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="../#">Nutrição Geral</a></li>
-                                                    <li><a href="../#">Nutrição Infantil</a></li>
-                                                    <li><a href="../#">Diabetes Gestacional</a></li>
-                                                    <li><a href="../#">Pré-conceção</a></li>
-                                                    <li><a href="../#">Pré-natal</a></li>
+                                                    <li><a href="#">Nutrição Geral</a></li>
+                                                    <li><a href="#">Nutrição Infantil</a></li>
+                                                    <li><a href="#">Diabetes Gestacional</a></li>
+                                                    <li><a href="#">Pré-conceção</a></li>
+                                                    <li><a href="#">Pré-natal</a></li>
                                                 </ul>
                                             </li>
                                             <li>
                                                 <span>Pediatria</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="../#">Pré-natal</a></li>
-                                                    <li><a href="../#">Rotina</a></li>
-                                                    <li><a href="../#">Criança doente</a></li>
-                                                    <li><a href="../#">Consulta de sono infantil</a></li>
-                                                    <li><a href="../#">Introdução alimentar</a></li>
+                                                    <li><a href="#">Pré-natal</a></li>
+                                                    <li><a href="#">Rotina</a></li>
+                                                    <li><a href="#">Criança doente</a></li>
+                                                    <li><a href="#">Consulta de sono infantil</a></li>
+                                                    <li><a href="#">Introdução alimentar</a></li>
                                                 </ul>
                                             </li>
                                             <li>
                                                 <span>Terapia ocupacional</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="../#">Infantil</a></li>
-                                                    <li><a href="../#">Neurológica</a></li>
-                                                    <li><a href="../#">Saúde Mental</a></li>
-                                                    <li><a href="../#">Snoezelen</a></li>
+                                                    <li><a href="#">Infantil</a></li>
+                                                    <li><a href="#">Neurológica</a></li>
+                                                    <li><a href="#">Saúde Mental</a></li>
+                                                    <li><a href="#">Snoezelen</a></li>
                                                 </ul>
                                             </li>
                                             <li>
                                                 <span>Testes diagnósticos</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="../#">Teste do pezinho</a></li>
-                                                    <li><a href="../#">Teste rápido de amigdalite bacteriana</a></li>
-                                                    <li><a href="../#">Teste rápido de malária</a></li>
-                                                    <li><a href="../#">Teste rápido de urina</a></li>
+                                                    <li><a href="#">Teste do pezinho</a></li>
+                                                    <li><a href="#">Teste rápido de amigdalite bacteriana</a></li>
+                                                    <li><a href="#">Teste rápido de malária</a></li>
+                                                    <li><a href="#">Teste rápido de urina</a></li>
                                                 </ul>
                                             </li>
                                         </ul>
@@ -192,13 +201,13 @@
                                 </li>
 
                                 <!-- Serviços Adicionais -->
-                                <li><a class="arrow" href="../additional-services.html">Vacinação<span
+                                <li><a class="arrow" href="./additional-services.html">Vacinação<span
                                             class="dropdown-arrow"></span></a>
                                     <ul class="dropdown">
-                                        <li><a href="../#">Adulto</a></li>
-                                        <li><a href="../#">Gravidez</a></li>
-                                        <li><a href="../#">Infantil</a></li>
-                                        <li><a href="../#">Viajante</a></li>
+                                        <li><a href="#">Adulto</a></li>
+                                        <li><a href="#">Gravidez</a></li>
+                                        <li><a href="#">Infantil</a></li>
+                                        <li><a href="#">Viajante</a></li>
                                     </ul>
                                 </li>
                                 <!-- Consultas -->
@@ -209,26 +218,26 @@
                                             <li>
                                                 <span>A Clínica durante a gravidez</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="../#">Amamentação</a></li>
-                                                    <li><a href="../#">Pediatria pré-natal</a></li>
-                                                    <li><a href="../#">Nutrição: pré-conceção, pré-natal, Diabetes
+                                                    <li><a href="#">Amamentação</a></li>
+                                                    <li><a href="#">Pediatria pré-natal</a></li>
+                                                    <li><a href="#">Nutrição: pré-conceção, pré-natal, Diabetes
                                                             Gestacional</a></li>
-                                                    <li><a href="../#">Snoezelen na gravidez</a></li>
+                                                    <li><a href="#">Snoezelen na gravidez</a></li>
                                                 </ul>
                                             </li>
 
                                             <li>
                                                 <span>Preparação para a Amamentação</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="../#">Curso Normal em grupo</a></li>
-                                                    <li><a href="../#">Curso Individual</a></li>
-                                                    <li><a href="../#">Preparation for Breastfeeding in English</a></li>
+                                                    <li><a href="#">Curso Normal em grupo</a></li>
+                                                    <li><a href="#">Curso Individual</a></li>
+                                                    <li><a href="#">Preparation for Breastfeeding in English</a></li>
                                                 </ul>
                                                 <br>
 
                                                 <ul class="dropdown-sec">
                                                     <span>
-                                                        <li><a href="../#" class="primary-btn">
+                                                        <li><a href="#" class="primary-btn">
                                                                 Galeria de fotos</a></li>
                                                     </span>
                                                 </ul>
@@ -237,14 +246,14 @@
                                             <li>
                                                 <span>Preparação para o parto</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="../#">Curso Normal em grupo</a></li>
-                                                    <li><a href="../#">Curso Individual</a></li>
-                                                    <li><a href="../#">Pre-natal course in English</a></li>
+                                                    <li><a href="#">Curso Normal em grupo</a></li>
+                                                    <li><a href="#">Curso Individual</a></li>
+                                                    <li><a href="#">Pre-natal course in English</a></li>
                                                 </ul>
                                                 <br>
                                                 <span>Exercício Físico</span>
                                                 <ul class="dropdown-sec">
-                                                    <li><a href="../#">Plano de treino para a gravidez</a></li>
+                                                    <li><a href="#">Plano de treino para a gravidez</a></li>
                                                 </ul>
                                             </li>
                                         </ul>
@@ -252,32 +261,32 @@
                                 </li>
 
                                 <!-- Serviços Adicionais -->
-                                <li><a class="arrow" href="../additional-services.html">Apoio ao domicílio <span
+                                <li><a class="arrow" href="./additional-services.html">Apoio ao domicílio <span
                                             class="dropdown-arrow"></span></a>
                                     <ul class="dropdown">
-                                        <li><a href="../#">Amamentação</a></li>
-                                        <li><a href="../#">Enfermagem</a></li>
-                                        <li><a href="../#">Teste do pezinho</a></li>
-                                        <li><a href="../#">Pacotes</a></li>
+                                        <li><a href="#">Amamentação</a></li>
+                                        <li><a href="#">Enfermagem</a></li>
+                                        <li><a href="#">Teste do pezinho</a></li>
+                                        <li><a href="#">Pacotes</a></li>
                                     </ul>
                                 </li><!-- Serviços Adicionais -->
-                                <li><a class="arrow" href="../additional-services.html">Workshops<span
+                                <li><a class="arrow" href="./additional-services.html">Workshops<span
                                             class="dropdown-arrow"></span></a>
                                     <ul class="dropdown">
-                                        <li><a href="../#">Amamentação</a></li>
-                                        <li><a href="../#">Bebé</a></li>
-                                        <li><a href="../#">Gravidez</a></li>
-                                        <li><a href="../#">Introdução alimentar</a></li>
-                                        <li><a href="../#">Parentalidade</a></li>
-                                        <li><a href="../#">Pediatria</a></li>
-                                        <li><a href="../#">Primeiros Socorros Pediátricos</a></li>
-                                        <li><a href="../#">Galeria de fotos</a></li>
+                                        <li><a href="#">Amamentação</a></li>
+                                        <li><a href="#">Bebé</a></li>
+                                        <li><a href="#">Gravidez</a></li>
+                                        <li><a href="#">Introdução alimentar</a></li>
+                                        <li><a href="#">Parentalidade</a></li>
+                                        <li><a href="#">Pediatria</a></li>
+                                        <li><a href="#">Primeiros Socorros Pediátricos</a></li>
+                                        <li><a href="#">Galeria de fotos</a></li>
                                     </ul>
                                 </li>
-                                <a href="../#" class="primary-btn" style="
-                                    right: 0;
-                                    position: absolute;
-                                "> <i class="fa fa-lock"></i> Área Reservada</a>
+                                <a href="#" class="primary-btn" style="
+                                            right: 0;
+                                            position: absolute;
+                                        "> <i class="fa fa-lock"></i> Área Reservada</a>
                             </ul>
 
                         </nav>
